--- a/mmretriever-dashboard/package.json
+++ b/mmretriever-dashboard/package.json
@@ -3,26 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.1.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/moment": "^2.13.0",
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4",
-    "axios": "^1.4.0",
-    "react-router-dom": "^6.14.0",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.6.0",
-    "@ant-design/icons": "^5.1.0",
-    "recharts": "^2.7.0",
+    "axios": "^1.4.0",
+    "i18next": "^23.2.0",
+    "i18next-browser-languagedetector": "^7.0.0",
     "moment": "^2.29.4",
-    "@types/moment": "^2.13.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.0",
+    "react-router-dom": "^6.14.0",
+    "react-scripts": "5.0.1",
+    "recharts": "^2.7.0",
+    "typescript": "^4.7.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
