--- a/api/config.template.yaml
+++ b/api/config.template.yaml
@@ -1,4 +1,4 @@
-# MMRetriever service configuration file
+# MoleRetriever service configuration file
 # Contains server configuration, MMExtractor configuration, SearchEngine configuration, etc.
 
 # Server configuration
