--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,11 +1,13 @@
 dataclasses-json
 dataclasses
 dashscope
-elasticsearch>=8.0.0,<9.0.0
+elasticsearch[async]>=8.0.0,<9.0.0
 requests
 pyyaml
 fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
+gunicorn>=21.0.0
 python-multipart>=0.0.6
 pydantic>=2.0.0
 oss2>=2.15.0
+ffmpeg-python>=0.2.0
