Remove Config page, clean up related menu item, and replace all occurrences of MoleRetriever with MoleSearch

--- a/api/config.template.yaml
+++ b/api/config.template.yaml
@@ -1,4 +1,4 @@
-# MoleRetriever service configuration file
+# MoleSearch service configuration file
 # Contains server configuration, MMExtractor configuration, SearchEngine configuration, etc.
 
 # Server configuration
